# lab2_warehouse_userver_rest_api

./: .gitignore  CMakeLists.txt  Dockerfile  Readme.md  docker-compose.yaml  openapi.yaml
config/: config.yaml
src/: main.cpp  storage.cpp  storage.hpp
src/handlers/: auth_handler.cpp  auth_handler.hpp  product_handler.cpp  product_handler.hpp  receipt_handler.cpp  receipt_handler.hpp  user_handler.cpp  user_handler.hpp
src/services/: product_service.cpp  product_service.hpp  receipt_service.cpp  receipt_service.hpp  user_service.cpp  user_service.hpp
src/utils/: auth_utils.cpp  auth_utils.hpp
tests/: run_tests.sh  test_api.sh
